--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,7 +39,7 @@ html {
   color: #fff;
 
   /* Visual */
-  background: #4aaaa5;
+  background: rgb(155, 161, 226);
 }
 
 .navbar-right-custom {
@@ -53,7 +53,7 @@ html {
 }
 
 .navbar-nav > li > a:hover {
-  color: #4aaaa5;
+  color: rgb(155, 161, 226);
 }
 
 /* --------NAV END---------- */
@@ -66,7 +66,7 @@ html {
   /* Typography */
   font-size: 32px;
   font-weight: bold;
-  color: #4aaaa5;
+  color: rgb(155, 161, 226);
 }
 
 .about-me-content {
@@ -78,7 +78,7 @@ html {
   margin-top: 32px;
 
   /* Visual */
-  background-color: #fff;
+  background-color: rgb(227, 225, 204);
 }
 
 .about-me-content > p {
@@ -88,7 +88,7 @@ html {
   /* Typography */
   font-size: 16px;
   line-height: 30px;
-  color: #bbc;
+  color: #666;
 }
 
 #anth-image {
@@ -118,7 +118,7 @@ html {
   margin-top: 32px;
 
   /* Visual */
-  background-color: #fff;
+  background-color: rgb(227, 225, 204);
 }
 
 .connect-with-me-header {
@@ -129,7 +129,7 @@ html {
   /* Typography */
   font-size: 25px;
   font-weight: bold;
-  color: #4aaaa5;
+  color: rgb(155, 161, 226);
 }
 
 .connect-with-me-photo {
